--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -5,9 +5,13 @@ const { platform, username } = Astro.props;
 
 <style>
     a {
+      align-self: center;
       padding: 0.5rem 1rem;
-      color: white;
-      background-color: #4c1d95;
+      color: #d3d3d3;
+      border-radius: 10vb;
+      margin: 1rem;
+      background-color: #45404c9e;
       text-decoration: none;
+      text-align: center;
     }
   </style>
