--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -30,13 +30,17 @@ const { frontmatter } = Astro.props;
       border: dotted 1px #3b3434;
       border-radius: .5em;
       padding: .5em 1em;
-      font-size: 1.15em;
       background-color: #d5dbdc;
     }
 
-    .tag :hover {
-      background-color: #b0b8b9;
-      transform: scale(1.05);
+    .tag a {
+      font-size: 1.15em;
+      color: #00539F;
+      text-decoration: none;
+    }
+
+    .tag :hover, :focus{
+      background-color: #92bec4;
     }
 
   </style>
