--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,14 +1,62 @@
+html.dark {
+  background-color: #0d0950;
+  color: white;
+}
+
+.dark .nav-links a {
+  color: white;
+}
+
 html {
     background-color: #f1f5f9;
     font-family: sans-serif;
+    line-height: 1.5;
+    color: #d3d3d3;
+    background: linear-gradient(45deg, #0a0a23, #1c1c30, #272730, #111111);
+    background-size: 400% 400%;
+    animation: gradientAnimation 10s ease infinite;
   }
   
   body {
     margin: 0 auto;
     width: 100%;
     max-width: 80ch;
+    height: 100vh;
     padding: 1rem;
     line-height: 1.5;
+    display: grid;
+    grid-template-areas: 
+    "header"
+    "content"
+    "footer";
+    gap: 2em;
+  }
+
+  .header {
+    grid-area: header;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .content {
+    grid-area: content;
+  }
+
+  .footer {
+    grid-area: footer;
+    justify-content: space-around;
+  }
+  
+  @keyframes gradientAnimation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
   }
   
   * {
@@ -42,6 +90,7 @@ html {
     background-color: #ff9776;
     display: none;
     margin: 0;
+    color: #D3D3D3;
   }
   
   .nav-links a {
@@ -102,7 +151,8 @@ html {
   
   .nav-links a:hover,
   .nav-links a:focus {
-    background-color: #ff9776;
+    background-color: #c2c2d725;
+    border-radius: 12vb;
   }
   
   .expanded {
@@ -121,6 +171,7 @@ html {
     .nav-links a {
       display: inline-block;
       padding: 15px 20px;
+      color: #D3D3D3;
     }
 
     .hamburger {
