--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,8 +14,10 @@ const { pageTitle } = Astro.props;
   </head>
   <body>
     <Header />
+    <div class="content">
     <h1>{pageTitle}</h1>
     <slot />
+    </div>
     <Footer />
     <script>
       import "../scripts/menu.js";
