--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,44 @@
 ---
-import Navigation from './Navigation.astro';
-import Hamburger from './Hamburger.astro';
-import ThemeIcon from './ThemeIcon.astro';
+import Navigation from "./Navigation.astro";
+import Hamburger from "./Hamburger.astro";
+import Title from "./Title.astro";
 ---
-<header class="header">
-  <nav>
-    <Hamburger />
-    <ThemeIcon />
-    <Navigation />
+
+<header class="header centered">
+  <nav class="nav-container">
+    <Hamburger class="hamburger" />
+    <Title class="title" />
+    <Navigation class="nav-links" />
   </nav>
 </header>
+
+<style>
+  .header {
+    width: 100%;
+  }
+
+  .nav-container {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .hamburger {
+    justify-self: end;
+    grid-column: 3;
+  }
+  .title {
+    justify-self: start;
+    grid-column: 2 / span 3;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
+    gap: 1rem;
+  }
+
+  .nav-links {
+    justify-self: end;
+    grid-column: -3 /  span 2;
+  }
+
+
+</style>
