--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,6 +1,7 @@
 ---
+const { class: className, ...rest } = Astro.props;
 ---
-<div class = "nav-links">
+<div class = {className} {...rest} >
 <a href="/">Home</a>
 <a href="/about/">About</a>
 <a href="/blog/">Blog</a>
