--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -1,8 +1,8 @@
 ---
-
+const { class: className, ...rest } = Astro.props;
 ---
 
-<button id="themeToggle">
+<button id="themeToggle" class={className} {...rest}  >
     <svg width="30px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
         <path
             class="sun"
