--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,19 +7,12 @@ const identity = {
   hobbies: ["photography", "birdwatching", "baseball"],
 };
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
 import '../styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 <html lang="en">
-    <Header />
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Astro</title>
-  </head>
+  <BaseLayout pageTitle={pageTitle}>
   <body>
-    <h1>About Me</h1>
     <h2>... and my new Astro site!</h2>
 
     <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
@@ -38,8 +31,5 @@ import '../styles/global.css';
   {skills.map((skill) => <li>{skill}</li>)}
 </ul>
   </body>
-  <Footer />
-  <script>
-    import "../scripts/menu.js";
-  </script>
+  </BaseLayout> 
 </html>
