--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,17 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle = "Home Page";
-import Greeting from '../components/Greetings';
 ---
-<BaseLayout pageTitle={pageTitle}>
-	<h2>My awesome blog subtitle</h2>
-	<Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
+<BaseLayout>
+	<h2>Welcome to Write to Learn!👋</h2>
+	<p>
+		This blog is my space to share my learning journey, projects, and experiences as an engineer.
+		Writing helps me dive deeper into topics, allowing me to learn more rigorously before sharing them with others.
+	</p>
+	<p>
+		You'll find content here on engineering practices, leadership insights, and tools or processes that enhance productivity and growth.
+	</p>
+	<p>
+		I hope these posts inspire and assist you on your own journey. 
+		If you enjoy the content, feel free to share it with others. And if you have feedback, I’d love to hear from you—it’s all part of the learning process!
+	</p>
 </BaseLayout>
