--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,11 +21,12 @@ html {
     padding: 1rem;
     line-height: 1.5;
     display: grid;
+    grid-template-columns: 2fr 3fr 2fr;
     grid-template-rows: auto 1fr auto;
     grid-template-areas: 
-    "header"
-    "content"
-    "footer";
+    "header header header"
+    ". content ."
+    ". footer .";
     gap: 2em;
   }
 
