--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -1,6 +1,7 @@
 ---
+const { class: className, ...rest } = Astro.props;
 ---
-<div class="hamburger">
+<div class={className} {...rest}>
     <span class="line"></span>
     <span class="line"></span>
     <span class="line"></span>
