--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,110 +8,148 @@ html.dark {
 }
 
 html {
-    background-color: #f1f5f9;
-    font-family: sans-serif;
-    line-height: 1.5;
-    color: #1e1e1e;
+  background-color: #f1f5f9;
+  font-family: sans-serif;
+  line-height: 1.5;
+  color: #1e1e1e;
 
-  }
-  
-  body {
-    width: 100%;
-    height: 100vh;
-    padding: 1rem;
-    line-height: 1.5;
-    display: grid;
-    grid-template-columns: 2fr 3fr 2fr;
-    grid-template-rows: auto 1fr auto;
-    grid-template-areas: 
-    "header header header"
-    ". content ."
-    ". footer .";
-    gap: 2em;
-  }
+}
 
-  .centered {
-    margin: 0 auto; /* margin-left auto and margin-right auto */
-  }
+body {
+  width: 90%;
+  height: 100vh;
+  padding: 1rem;
+  line-height: 1.5;
+  gap: 2em;
+}
 
-  .header {
-    grid-area: header;
-  }
+.centered {
+  margin: 0 auto;
+  /* margin-left auto and margin-right auto */
+}
 
-  .content {
-    grid-area: content;
-  }
+.header {
+  grid-area: header;
+}
 
-  * {
-    box-sizing: border-box;
-  }
-  
-  h1 {
-    margin: 1rem 0;
-    font-size: 2.5rem;
-  }
+.content {
+  grid-area: content;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+h1 {
+  margin: 1rem 0;
+  font-size: 2.5rem;
+}
 
 /* nav styles */
 
-.hamburger {
-    padding-right: 20px;
-    cursor: pointer;
-  }
-  
-  .hamburger .line {
-    display: block;
-    width: 40px;
-    height: 5px;
-    margin-bottom: 10px;
-  }
-  
+
+.header {
+  width: 100%;
+}
+
+
+
 
 
 .nav-links {
+
+  width: 100%;
+  top: 5rem;
+  left: 48px;
+  display: none;
+  margin: 0;
+}
+
+.nav-links a {
+  display: block;
+  text-align: center;
+  padding: 10px 0;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #1d1e20;
+}
+
+.nav-links a:hover,
+.nav-links a:focus {
+  background-color: #c2c2d725;
+  border-radius: 12vb;
+}
+
+.expanded {
+  display: unset;
+}
+
+.title {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  gap: 1rem;
+}
+
+.hamburger {
+  padding-right: 20px;
+  cursor: pointer;
+  justify-self: center;
+  grid-column: 6;
+}
+
+.hamburger .line {
+  display: block;
+  width: 30px;
+  height: 2px;
+  margin-bottom: 10px;
+  background-color: #8f8f8f;
+  /* Add background color to make lines visible */
+}
+
+
+@media screen and (min-width: 906px) {
+
+  body {
     width: 100%;
-    top: 5rem;
-    left: 48px;
-    display: none;
-    margin: 0;
+    display: grid;
+    grid-template-columns: 2fr 3fr 2fr;
+    grid-template-rows: auto 1fr auto;
+    grid-template-areas:
+      "header header header"
+      ". content ."
+      ". footer .";
   }
-  
-  .nav-links a {
+
+  .nav-container {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .nav-links {
+    justify-self: end;
+    grid-column: -3 / span 2;
+    margin-left: 5em;
     display: block;
-    text-align: center;
-    padding: 10px 0;
-    text-decoration: none;
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-transform: uppercase;
+    position: static;
+    width: auto;
+    background: none;
   }
-  
-  .nav-links a:hover,
-  .nav-links a:focus {
-    background-color: #c2c2d725;
-    border-radius: 12vb;
-  }
-  
-  .expanded {
-    display: unset;
-  }
-  
 
-  @media screen and (min-width: 636px) {
-    .nav-links {
-      margin-left: 5em;
-      display: block;
-      position: static;
-      width: auto;
-      background: none;
-    }
-  
-    .nav-links a {
-      display: inline-block;
-      padding: 15px 20px;
-      color: #1e1e1e;
-    }
-
-    .hamburger {
-        display: none;
-      }
+  .nav-links a {
+    display: inline-block;
+    padding: 15px 20px;
+    color: #1e1e1e;
   }
+
+  .title {
+    justify-self: start;
+    grid-column: 2 / span 3;
+  }
+
+  .hamburger {
+    display: none;
+  }
+}
