--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import '../styles/global.css';
 const { pageTitle } = Astro.props;
@@ -7,6 +8,7 @@ const { pageTitle } = Astro.props;
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
@@ -20,5 +22,6 @@ const { pageTitle } = Astro.props;
     <script>
       import "../scripts/menu.js";
     </script>
+    <Footer />
   </body>
 </html>
