--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,16 +28,18 @@ body {
   /* margin-left auto and margin-right auto */
 }
 
-.header {
-  grid-area: header;
-}
 
-.content {
-  grid-area: content;
-}
 
 * {
   box-sizing: border-box;
+}
+
+.footer {
+  text-align: center;
+  margin-left: 0;
+  margin-right: auto;
+  margin-top: 2rem;
+  gap: 1rem;
 }
 
 h1 {
@@ -51,9 +53,6 @@ h1 {
 .header {
   width: 100%;
 }
-
-
-
 
 
 .nav-links {
@@ -122,7 +121,20 @@ h1 {
       ". content ."
       ". footer .";
   }
-
+  
+  .header {
+    grid-area: header;
+  }
+  
+  .content {
+    grid-area: content;
+  }
+  .footer {
+    margin: unset;
+    grid-area: footer;
+    text-align: center;
+    justify-self: center;
+  }
   .nav-container {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
