--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,9 @@
 ---
-import Social from './Social.astro';
 ---
 <style>
+  .license {
+    font-size: smaller
+  }
   .license-link {
     color: #00539F;
   }
