--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -2,7 +2,7 @@
 const { class: className, ...rest } = Astro.props;
 ---
 
-<button id="themeToggle" class={className} {...rest}  >
+<button id="themeToggle" aria-label="Toggle Dark Mode" class={className} {...rest}  >
     <svg width="30px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
         <path
             class="sun"
