--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,7 +4,7 @@ import Header from '../components/Header.astro';
 import '../styles/global.css';
 const { pageTitle } = Astro.props;
 ---
-<html lang="en">
+<html lang="en" title={pageTitle}>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
