remove: ARIA label

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import Title from "./Title.astro";
 
 <header class="header centered">
   <nav class="nav-container">
-    <Hamburger aria-label="Hamburger Menu" class="hamburger" />
+    <Hamburger class="hamburger" />
     <Title class="title" />
     <Navigation class="nav-links" />
   </nav>
