--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,16 +1,13 @@
 ---
 import '../styles/global.css';
+import BlogContainer from '../components/BlogContainer.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
-import BlogPost from '../components/BlogPost.astro';
-const pageTitle = "My Astro Learning Blog";
+const pageTitle = "Blog Posts";
 const allPosts = await Astro.glob('./posts/*.md');
 ---
 <html lang="en">
   <BaseLayout pageTitle={pageTitle}>
-    <p>This is where I will post about my journey learning Astro.</p>
-    <ul>
-        {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}></BlogPost>)}
-    </ul>
+    <BlogContainer posts={allPosts} />
   </body>
 </BaseLayout>
 </html>
