--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -90,6 +90,9 @@ const {
         padding: 8px 21px;
 
         border-radius: 12px;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     #container:focus,
