add: Default value for page Size

--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -4,7 +4,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import BlogContainer from "../../components/BlogContainer.astro";
 
 export const getStaticPaths = (async ({ paginate }) => {
-    const pageSize = Number(import.meta.env.PAGE_SIZE);
+    const pageSize = Number(import.meta.env.PAGE_SIZE) || 10;
     console.log(pageSize)
     const posts: MarkdownInstance<Record<string, any>>[] = 
         await Astro.glob("../posts/*.md");
