--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -4,7 +4,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import BlogContainer from "../../components/BlogContainer.astro";
 
 export const getStaticPaths = (async () => {
-    const pageSize = Number(import.meta.env.PAGE_SIZE);
+    const pageSize = Number(import.meta.env.PAGE_SIZE) || 10;
     const allPosts: MarkdownInstance<Record<string, any>>[] =
         await Astro.glob("../posts/*.md");
     const uniqueTags = [
