--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -3,10 +3,16 @@ import type { GetStaticPaths, MarkdownInstance, Page } from "astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import BlogContainer from "../../components/BlogContainer.astro";
 
-export const getStaticPaths = (async () => {
+export const getStaticPaths = async () => {
     const pageSize = Number(import.meta.env.PAGE_SIZE) || 10;
-    const allPosts: MarkdownInstance<Record<string, any>>[] =
-        await Astro.glob("../posts/*.md");
+    //TODO: Handle Empty Page Case
+    let allPosts: MarkdownInstance<Record<string, any>>[] = [];
+    try {
+        allPosts = await Astro.glob("../posts/*.md");
+    } catch (error) {
+        console.error("Error loading posts:", error);
+        allPosts = [];
+    }
     const uniqueTags = [
         ...new Set(allPosts.map((post) => post.frontmatter.tags).flat()),
     ];
@@ -14,8 +20,10 @@ export const getStaticPaths = (async () => {
         const filteredPosts = allPosts
             .filter((post) => post.frontmatter.tags.includes(tag))
             .sort((a, b) => {
-                return new Date(b.frontmatter.pubDate).getTime() -
-                    new Date(a.frontmatter.pubDate).getTime();
+                return (
+                    new Date(b.frontmatter.pubDate).getTime() -
+                    new Date(a.frontmatter.pubDate).getTime()
+                );
             });
 
         const page = {
@@ -29,15 +37,18 @@ export const getStaticPaths = (async () => {
             url: {
                 current: `/tags/${tag}`,
                 prev: undefined,
-                next: filteredPosts.length > pageSize ? `/tags/${tag}/2` : undefined,
+                next:
+                    filteredPosts.length > pageSize
+                        ? `/tags/${tag}/2`
+                        : undefined,
             },
         };
         return {
             params: { tag },
-            props: { page }
+            props: { page },
         };
     });
-});
+};
 
 const { tag } = Astro.params;
 const { page } = Astro.props;
