--- a/src/pages/tags/[tag]/[page].astro
+++ b/src/pages/tags/[tag]/[page].astro
@@ -4,8 +4,14 @@ import BaseLayout from "../../../layouts/BaseLayout.astro";
 import BlogContainer from "../../../components/BlogContainer.astro";
 export const getStaticPaths = (async ({ paginate }) => {
     const pageSize = Number(import.meta.env.PAGE_SIZE) || 10;
-    const allPosts: MarkdownInstance<Record<string, any>>[] =
-        await Astro.glob("../../posts/*.md");
+    //TODO: Handle Empty Page Case
+    let allPosts: MarkdownInstance<Record<string, any>>[] = [];
+    try {
+        allPosts = await Astro.glob("../posts/*.md");
+    } catch (error) {
+        console.error("Error loading posts:", error);
+        allPosts = [];
+    }
     const uniqueTags = [
         ...new Set(allPosts.map((post) => post.frontmatter.tags).flat()),
     ];
