add: Liniting and prettier

--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -1,5 +1,5 @@
 ---
-import type { GetStaticPaths, MarkdownInstance, Page } from "astro";
+import type { GetStaticPaths, MarkdownInstance } from "astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import BlogContainer from "../../components/BlogContainer.astro";
 
