--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -6,7 +6,6 @@ const { frontmatter } = Astro.props;
 <BaseLayout pageTitle={frontmatter.title}>
 <p>Published on: {frontmatter.pubDate.toString().slice(0,10)}</p>
 <p><em>{frontmatter.description}</em></p>
-<p>Written by {frontmatter.author}</p>
 <hr />
 <slot />
 <div class="tags">
@@ -21,6 +20,7 @@ const { frontmatter } = Astro.props;
     }
   
     .tags {
+      margin-top: 5vh;
       display: flex;
       flex-wrap: wrap;
     }
