--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -54,12 +54,13 @@ const contactMe = [
       <p>
         I am currently working as Software Development Engineer in Test at <a
           class="emumba-link"
-          href="https://emumba.com/">Emumba</a
+          href="https://emumba.com/">Emumba.</a
         >
       </p>
       <p>
-        My journey began as an Electrical Engineer, but my love for software
-        engineering inspired me to switch fields Over the years, I've honed my
+        My academic background is in Electrical Engineering, but my professional
+        journey gradually led me into the world of software development.
+        Over the years, I've honed my
         skills by working on a variety of challenging projects and collaborating
         with talented individuals.
       </p>
