--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -39,7 +39,7 @@ export const getStaticPaths = async () => {
                 prev: undefined,
                 next:
                     filteredPosts.length > pageSize
-                        ? `/tags/${tag}/2`
+                        ? `/${tag}/2`
                         : undefined,
             },
         };
