--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -36,7 +36,7 @@ const pageTitle = "Tag Index"
 <BaseLayout pageTitle = { pageTitle }>
     <div class="tags">
         {tags.map((tag) => (
-          <p class="tag"><a href={`/tags/${tag}/1`}>{tag}</a></p>
+          <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
         ))}
       </div>
 </BaseLayout>
